# Teacher-student-Distillation-Model---LLAVA

./: .gitignore  fusion_result.json  main.py  pyproject.toml
notes/: setup.txt
student/: run_student_pipeline.py  student_model.py  test_attention_mask.py  test_decode_one_token.py  test_fusion.py  test_llm_forward.py  test_llm_forward_small.py  test_shapes.py  test_text.py
