[project]
name = "project-llava-distill"
version = "0.1.0"
description = "Teacher-Student Distillation for LLaVA (NeurIPS 2023)"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.37.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=0.26.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "datasets>=2.16.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
]